--- a/Duffy/DFSearchViewController.xib
+++ b/Duffy/DFSearchViewController.xib
@@ -16,11 +16,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f4T-rw-vqS">
+                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f4T-rw-vqS">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </webView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7kT-Iv-7ae">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7kT-Iv-7ae">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -31,6 +31,16 @@
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="f4T-rw-vqS" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="7Jh-ZO-7KJ"/>
+                <constraint firstAttribute="bottom" secondItem="f4T-rw-vqS" secondAttribute="bottom" id="9Jm-8L-ff0"/>
+                <constraint firstItem="7kT-Iv-7ae" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="9oF-fW-rBT"/>
+                <constraint firstItem="f4T-rw-vqS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="B8W-YL-gUi"/>
+                <constraint firstAttribute="trailing" secondItem="f4T-rw-vqS" secondAttribute="trailing" id="Wg6-QH-CN7"/>
+                <constraint firstItem="7kT-Iv-7ae" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hFZ-9h-1bA"/>
+                <constraint firstAttribute="bottom" secondItem="7kT-Iv-7ae" secondAttribute="bottom" id="pjj-gB-Jq7"/>
+                <constraint firstAttribute="trailing" secondItem="7kT-Iv-7ae" secondAttribute="trailing" id="qWo-r5-6on"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
