--- a/peanut/photos/templates/photos/search_webview.html
+++ b/peanut/photos/templates/photos/search_webview.html
@@ -1,3 +1,5 @@
+{% load dictionary_extras %}
+
 <!DOCTYPE html> 
 <html> 
 
@@ -11,19 +13,6 @@
 	<script src="//code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
 	<script src="http://photos.derektest1.com/js/jquery.lazyload.js"></script>
 	-->
-
-
-	<script>
-
-		$(document).ready($(function() {
-			$('img').each(function(){
-				oldName = $(this).attr('fname').split(".");
-				newName = oldName[0]+"-thumb-{{ imageSize|add:imageSize }}.jpg"
-				$(this).attr('src', $(this).attr('path') + newName);
-			});
-	    	//$("img.lazy").lazyload();
-		}));
-	</script>
 <style>
 	html, body { padding: 0; margin: 0; }
 	html, .ui-mobile, .ui-mobile body {
@@ -90,8 +79,8 @@
 		<div class = "ui-image">
 			<a href="{{ thumbnailBasepath }}{{ result.photoFilename }}"> 
 			<!--<a href="/viz/serve_image?photo={{ result.photoFilename }}" rel="external"> -->
- 			 	<img path="{{ thumbnailBasepath }}" fname="{{ result.photoFilename }}" data-origi="{{ thumbnailBasepath }}{{ result.photoFilename }}" class="lazyo" width="{{ imageSize }}px"></a>
- 		</div>
+				<img src="{{ thumbnailBasepath }}{{ photoIdToThumb|lookup:result.photoId }}" class="lazyo" width="{{ imageSize }}px"></a>
+		</div>
 
 		{% endfor %}
 		
