cleaned up CSS for gallery view

--- a/peanut/photos/templates/photos/gallery.html
+++ b/peanut/photos/templates/photos/gallery.html
@@ -46,28 +46,8 @@
 		height: {{ imageSize|add:+2 }}px;
 
 	}
-	.result-bottom, .prev-next {
-		text-align: center;
-		clear:both;
-	}
-	.text, .prev-next {
+	.text{
 		font-family: arial;
-	}
-	.prev-next {
-		width: 100%;
-		padding-bottom: 10px;
-	}
-	.prev {
-		border-right: 1px solid #000000;
-		padding-right: 6px;
-		width: 49%;
-		float:left;
-		text-align: right;
-	}
-	.next {
-		padding-left: 6px;
-		text-align: left;
-		overflow: hidden;
 	}
 	.hidden {
 		display: none;
