added searchbox, debug tag, top_times.. Probably should have split these in separate code blocks

--- a/peanut/photos/templates/photos/search.html
+++ b/peanut/photos/templates/photos/search.html
@@ -1,3 +1,5 @@
+{% load dictionary_extras %}
+
 <!DOCTYPE html> 
 <html> 
 
@@ -43,7 +45,7 @@
 
 					$.ajax({
 						//url: "http://gd.geobytes.com/AutoCompleteCity",
-						url: "/api/search",
+						url: "/api/searchJQmobile",
 						dataType: "json",
 						crossDomain: true,
 						data: {
