--- a/peanut/photos/templates/photos/search_webview.html
+++ b/peanut/photos/templates/photos/search_webview.html
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<meta name="mobile-web-app-capable" content="yes">
 	<title>Search your photos</title> 
 	<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
 <style>
