--- a/peanut/photos/templates/admin/userbaseSummary.html
+++ b/peanut/photos/templates/admin/userbaseSummary.html
@@ -1,25 +1,64 @@
 <html>
 <style>
-	html, body { padding: 0; margin: 0; }
+	html, body { padding: 0; margin: 0; font-family: arial; font-size: 12px;}
+	table {
+		border-collapse: collapse;
+	}
+	table, th, td {
+		border: 1px solid black;
+		font-size: 12px;
+	}
+	td {
+		padding: 0px 5px 0px 5px;
+	}
+	.ui-row-internal {
+		background-color: #C0C0C0;
+	}
+	.ui-content {
+		padding: 10px 0px 0px 10px;
+	}
+	.ui-table {
+
+	}
+	.ui-row {
+
+	}
+	.ui-row-header {
+		font-weight: bold;
+		font-size: 12px;
+	}
+	.ui-footer {
+		padding: 10px 0px 0px 0px;
+	}
 
 </style>
 <body>
 <div class="ui-content">
-	<table border='1px'>
-		<tr>
+	<table class='ui-table' cellpadding='3'>
+		<tr class='ui-row-header' >
 			<td class='userid'> UserId </td>
 			<td class='name'> Name </td>
 			<td class='phoneid'> PhoneId </td>
-			<td class='count'> Photos </td>
+			<td class='created'> Created </td>
+			<td class='db-count'> DBPhotos </td>
+			<td class='index-count'> IndexedPhotos </td>
+			<td class='last-uploaded-timestamp'> Last Upload </td>
 		</tr>
 	{% for entry in resultList %}
-		<tr>
+		<tr class='ui-row {% if entry.internal %} ui-row-internal {% endif %}'>
 			<td class='userid'> {{ entry.user.id }} </td>
 			<td class='name'> {{ entry.user.first_name}} {{ entry.user.last_name }} </td>
 			<td class='phoneid'> {{ entry.user.phone_id}} </td>
-			<td class='count'> {{ entry.resultsCount }} </td>
+			<td class='created'> {{ entry.user.added }} </td>
+			<td class='db-count'> {{ entry.dbCount }} </td>
+			<td class='index-count'> {{ entry.resultsCount }} </td>
+			<td class='last-uploaded-timestamp'> {{ entry.lastUploadTime }} </td>
 		</tr>
 	{% endfor %}
+</table>
+	<div class="ui-footer">
+		Key: <span style='background-color: #C0C0C0;'> Shaded</span> rows are internal users.
+	</div>
 </div>
 </body>
 </html>
